--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.11",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
-    "nodemon": "^3.1.0"
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.0",
+    "path": "^0.12.7",
+    "uuid": "^11.0.2"
   }
 }
