--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=1024
 dbURL=mongodb+srv://nci:bSV7T2WQwCiAzeB1@nci.kwe5owj.mongodb.net/?retryWrites=true&w=majority&appName=nci
 secretKey=mern-secket-key
-EMAIL_USER=wangable.fronted44@gmail.com
-EMAIL_PASS=nomhvlkpyuppcala
+EMAIL_USER=nextcryptopool@gmail.com
+EMAIL_PASS=pbinlrdxnbzaacpz
