--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel . --out-dir dist --ignore node_modules",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -27,5 +28,10 @@
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "uuid": "^11.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0"
   }
 }
